# pdf-tools

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
pdf_tools/: __main__.py  pdf_tools.py
pdf_tools/common/: __init__.py  enums.py  pdf_tools.py  utils.py
pdf_tools/common/helper/: progress_bar.py  utils.py
pdf_tools/gui/: __init__.py  app.py  main_window.py
scripts/: run.sh  setup-dev-env.sh
