[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-tools"
version = "0.1.0"
description = "PDF processing tools including merge, compress, and convert functions"
authors = [{name = "thsvkd", email = "thsxogud1123@gmail.com"}]
dependencies = [
    "pdf2image",
    "tqdm",
    "Pillow",
    "PyPDF2",
    "coloredlogs",
    "dotenv",
    "click",
    "PyQt6",
]
requires-python = ">=3.8"

[project.scripts]
pdf-tools = "pdf_tools.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_tools"]
exclude = [] 

[tool.ruff]
# Line length setting
line-length = 88

# Python version setting
target-version = "py312"

[tool.ruff.lint]
# Check rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    # "UP",  # pyupgrade
]

[tool.ruff.format]
# 문자열 따옴표 스타일
quote-style = "double"

# 들여쓰기 스타일
indent-style = "space"

# 라인 끝 스타일
line-ending = "auto"

[tool.ruff.lint.isort]
# Import sorting settings
known-first-party = ["pdf_tools"]