[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-tools"
version = "0.1.0"
description = "PDF processing tools including merge, compress, and convert functions"
authors = [{name = "thsvkd", email = "thsxogud1123@gmail.com"}]
dependencies = [
    "pdf2image",
    "tqdm",
    "Pillow",
    "PyPDF2",
    "coloredlogs",
    "dotenv",
    "click",
    "PyQt6",
    "pre-commit",
]
requires-python = ">=3.9"

[project.scripts]
pdf-tools = "pdf_tools.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_tools"]
exclude = []

[tool.ruff]
# Line length setting (same as Black)
line-length = 120

# Indentation width (number of spaces per indentation level)
indent-width = 4

# Python version setting
target-version = "py312"

# File exclusion settings
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable additional rule sets
select = [
    "E4", "E7", "E9",  # subset of pycodestyle
    "F",               # Pyflakes
    "I",               # isort
    "B",               # flake8-bugbear
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by line-length setting)
]

# Allow fix for all enabled rules (when --fix is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"

# Like Black, indent with spaces, rather than tabs
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings
docstring-code-format = false

# Set the line length limit used when formatting code snippets in docstrings
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["pdf_tools"]
